--- a/OdeToFoodMVC/OdeToFood/OdeToFood.Web/Web.Release.config
+++ b/OdeToFoodMVC/OdeToFood/OdeToFood.Web/Web.Release.config
@@ -7,25 +7,25 @@
     In the example below, the "SetAttributes" transform will change the value of
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
     finds an attribute "name" that has a value of "MyDB".
+-->
+	<connectionStrings>
+		<add name="OdeToFoodDbContext"
+		  connectionString="Data Source=.;Initial Catalog=OdeToFood;Integrated Security=True"
+		  xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+	</connectionStrings>
 
-    <connectionStrings>
-      <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
-  -->
-  <system.web>
+	<system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
       In the example below, the "Replace" transform will replace the entire
       <customErrors> section of your Web.config file.
       Note that because there is only one customErrors section under the
       <system.web> node, there is no need to use the "xdt:Locator" attribute.
-
-      <customErrors defaultRedirect="GenericError.htm"
+-->
+	  <customErrors defaultRedirect="GenericError.htm"
         mode="RemoteOnly" xdt:Transform="Replace">
-        <error statusCode="500" redirect="InternalError.htm"/>
-      </customErrors>
-    -->
+		  <error statusCode="500" redirect="InternalError.htm"/>
+	  </customErrors>
+
   </system.web>
 </configuration>
